Extract model for ai search request

--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -1,7 +1,7 @@
 <div>
   <h1>Cooknow</h1>
 
-  <p><%= chat_gpt_request %></p>
+  <p><%= ai_search_request.request %></p>
 
   <%= button_to "Start Again", :search, method: :delete %>
 
