--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,26 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
-      <%= yield %>
+    <main class="flex flex-col items-center min-h-screen">
+      <div class="flex flex-col flex-grow">
+        <h1 class="text-3xl font-medium text-center p-8 flex-grow">
+          Cooknow
+        </h1>
+
+        <div class="p-8 flex-grow">
+          <%= yield %>
+        </div>
+
+        <div class="p-8">
+          <%= button_to "Start Again", :search,
+            method: :delete,
+            class: "w-full px-16 py-4 bg-blue-500 hover:bg-blue-700 text-white rounded shadow" %>
+        </div>
+      </div>
+
+      <pre class="bg-gray-300 p-16 w-full">
+        <%= search.inspect %>
+      </pre>
     </main>
   </body>
 </html>
