--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <main class="flex flex-col items-center min-h-screen">
-      <div class="flex flex-col flex-grow">
+      <div class="flex flex-col flex-grow max-w-screen-md">
         <h1 class="text-3xl font-medium text-center p-8 flex-grow">
           Cooknow
         </h1>
