--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -1,10 +1,12 @@
 <h2 class="font-medium text-xl text-center p-8">
-  <%= question[:question] %>
+  <%= question.question %>
 </h2>
 
-<div class="flex gap-4">
-  <% question[:answers].each do |answer| %>
-    <%= button_to :search, params: { category: question[:category], answer: answer }, class: "rounded shadow bg-orange-500 hover:bg-orange-700 px-8 py-4 text-white" do %>
+<div class="flex gap-4 flex-wrap justify-center">
+  <% question.answers.each do |answer| %>
+    <%= button_to :search,
+      params: { search: search.to_params.merge(question.category => answer) },
+      class: "rounded shadow bg-orange-500 hover:bg-orange-700 px-8 py-4 text-white" do %>
       <%= answer %>
     <% end %>
   <% end %>
