--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -1,3 +1,7 @@
+<% if search.to_params.present? %>
+  <% content_for(:selections, search.to_params.values.join(", ")) %>
+<% end %>
+
 <h2 class="font-medium text-xl text-center p-8">
   <%= question.question %>
 </h2>
