--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -2,9 +2,13 @@
   <% content_for(:selections, search.to_params.values.join(", ")) %>
 <% end %>
 
-<h2 class="font-medium text-xl py-4">
-  <%= recipe[:title] %>
-</h2>
+<div class="relative rounded-lg shadow h-64 overflow-hidden mb-6">
+  <%= image_tag recipe_image.url, class: "object-fit w-full h-auto" %>
+
+  <h2 class="font-medium text-2xl px-8 py-4 absolute left-0 bottom-0 right-0 text-white bg-gradient-to-t from-black/60">
+    <%= recipe[:title] %>
+  </h2>
+</div>
 
 <h3 class="font-medium text-lg py-2">
   Ingredients
