--- a/app/views/application/_navigation.html.erb
+++ b/app/views/application/_navigation.html.erb
@@ -1,8 +1,6 @@
-<div class="fixed z-10 p-8 bg-gray-300 w-full">
+<div class="fixed z-10 py-6 bg-gradient-to-l from-blue-900 to-sky-900 w-full shadow-lg">
   <div class="flex items-center max-w-screen-lg mx-auto">
-    <h1 class="text-3xl font-semibold">
-      Cooknow
-    </h1>
+    <%= link_to "Cooknow", root_path, class: "text-3xl font-semibold text-white" %>
 
     <div class="flex-grow"></div>
 
