--- a/app/views/application/_navigation.html.erb
+++ b/app/views/application/_navigation.html.erb
@@ -1,5 +1,5 @@
 <div class="fixed z-10 py-6 bg-gradient-to-l from-blue-900 to-sky-900 w-full shadow-lg">
-  <div class="flex items-center max-w-screen-lg mx-auto">
+  <div class="flex items-center max-w-screen-lg mx-auto px-4 lg:px-0">
     <%= link_to "Cooknow", root_path, class: "text-3xl font-semibold text-white" %>
 
     <div class="flex-grow"></div>
